--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="chefs.html">Team</a></li>
+            <li><a href="team.html">Team</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
             <li><a href="cart.html" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
