--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
         </a>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
-            <li><a href="cart.html" class="cart-icon">
+            <li><a href="/" class="active">Home</a></li>
+            <li><a href="menu">Menu</a></li>
+            <li><a href="team">Team</a></li>
+            <li><a href="contact">Contact</a></li>
+            <li><a href="cart" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
                 <span class="cart-badge">0</span>
             </a></li>
