--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h1>ChakHao</h1>
             <p>Authentic flavors brought to life by passion and tradition.</p>
             <div class="btn-group">
-                <a href="menu.html" class="btn btn-primary">Order Now</a>
+                <a href="menu" class="btn btn-primary">Order Now</a>
                 <a href="#about" class="btn btn-outline">Our Story</a>
             </div>
         </div>
