fixed animation bug

--- a/team.html
+++ b/team.html
@@ -46,6 +46,7 @@
     <footer style="padding: 20px 0;"></footer>
     <script src="script.js"></script>
     
+    <script src="https://gistcdn.githack.com/LMeiraba/aee53e93b36614306ba10666fc13bc3c/raw/97bbd126bad594486eef049ba2cc8a6c784be853/handleAnimation.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if(typeof renderTeam === "function") {
