--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <meta name="title" content="ChakHao - Authentic Flavors">
+    <meta name="description" content="Handcrafted dishes made with love and tradition. Order authentic food online now.">
+    <meta name="theme-color" content="#d35400"> <meta property="og:type" content="website">
+    <meta property="og:url" content="https://your-website-link.com/">
+    <meta property="og:title" content="ChakHao - Authentic Flavors">
+    <meta property="og:description" content="Handcrafted dishes made with love and tradition. Order authentic food online now.">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://your-website-link.com/">
+    <meta property="twitter:title" content="ChakHao - Authentic Flavors">
+    <meta property="twitter:description" content="Handcrafted dishes made with love and tradition. Order authentic food online now.">
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80">
 </head>
 <body>
 
