--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
             <li><a href="menu">Menu</a></li>
             <li><a href="team">Team</a></li>
             <li><a href="contact">Contact</a></li>
-            <li><a href="cart" class="cart-icon">
+            <li>
+                <a href="cart" class="cart-icon">
                     <i class="fas fa-shopping-cart"></i>
                     <span class="cart-badge">0</span>
-                </a></li>
+                </a>
+            </li>
         </ul>
     </nav>
 
