--- a/menu.html
+++ b/menu.html
@@ -31,8 +31,8 @@
         </a>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
         <ul class="nav-links">
-            <li><a href="/" class="active">Home</a></li>
-            <li><a href="menu">Menu</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="menu" class="active">Menu</a></li>
             <li><a href="team">Team</a></li>
             <li><a href="contact">Contact</a></li>
             <li><a href="cart" class="cart-icon">
