--- a/team.html
+++ b/team.html
@@ -19,9 +19,9 @@
         </a>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
         <ul class="nav-links">
-            <li><a href="/" class="active">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="menu">Menu</a></li>
-            <li><a href="team">Team</a></li>
+            <li><a href="team" class="active">Team</a></li>
             <li><a href="contact">Contact</a></li>
             <li><a href="cart" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
