--- a/cart.html
+++ b/cart.html
@@ -18,11 +18,11 @@
         </a>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
         <ul class="nav-links">
-            <li><a href="/" class="active">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="menu">Menu</a></li>
             <li><a href="team">Team</a></li>
             <li><a href="contact">Contact</a></li>
-            <li><a href="cart" class="cart-icon">
+            <li><a href="cart" class="active" class="cart-icon">
                 <i class="fas fa-shopping-cart"></i>
                 <span class="cart-badge">0</span>
             </a></li>
