--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChakHao - The Taste of Home</title>
 
-    <link rel="icon" type="image/png" href="https://files.catbox.moe/skenzm.png">
+    <link rel="icon" type="image/png" href="https://files.catbox.moe/21wq4l.png">
 
     <link rel="stylesheet" href="style.css">
 
