--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar">
         <a href="index.html" class="logo-link">
-            <img src="https://files.catbox.moe/skenzm.png" alt="ChakHao Logo" class="logo-img">
+            <img src="https://files.catbox.moe/21wq4l.png" alt="ChakHao Logo" class="logo-img">
         </a>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
         <ul class="nav-links">
@@ -52,7 +52,7 @@
 
     <header class="hero">
         <div class="hero-content">
-            <img src="https://files.catbox.moe/skenzm.png" alt="ChakHao Brand" class="hero-logo">
+            <img src="https://files.catbox.moe/21wq4l.png" alt="ChakHao Brand" class="hero-logo">
 
             <span class="subtitle">Simply Tasty</span>
             <h1>ChakHao</h1>
