--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChakHao - The Taste of Home</title>
 
-    <link rel="icon" type="image/png" href="https://files.catbox.moe/21wq4l.png">
+    <link rel="icon" type="image/png" href="https://files.catbox.moe/skenzm.png">
 
     <link rel="stylesheet" href="style.css">
 
@@ -52,7 +52,7 @@
 
     <header class="hero">
         <div class="hero-content">
-            <img src="https://files.catbox.moe/21wq4l.png" alt="ChakHao Brand" class="hero-logo">
+            <img src="https://files.catbox.moe/skenzm.png" alt="ChakHao Brand" class="hero-logo">
 
             <span class="subtitle">Simply Tasty</span>
             <h1>ChakHao</h1>
