--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChakHao - The Taste of Home</title>
+    <title>Les Saveurs de Langpoklakpam - The Flavours of Langpoklakpam</title>
 
     <link rel="icon" type="image/png" href="https://files.catbox.moe/skenzm.png">
 
@@ -55,7 +55,7 @@
             <img src="https://files.catbox.moe/skenzm.png" alt="ChakHao Brand" class="hero-logo">
 
             <span class="subtitle">Simply Tasty</span>
-            <h1>ChakHao</h1>
+            <h1>Les Saveurs de Langpoklakpam</h1>
             <p>Authentic flavors brought to life by passion and tradition.</p>
             <div class="btn-group">
                 <a href="menu" class="btn btn-primary">Order Now</a>
@@ -87,7 +87,7 @@
             </div>
             <div class="about-text">
                 <h3>Our Journey</h3>
-                <p><strong>ChakHao</strong> wasn't built by a single person; it was born from a collective dream.
+                <p><strong>Les Saveurs de Langpoklakpam</strong> wasn't built by a single person; it was born from a collective dream.
                     We are a team of childhood friends who grew up believing that the best conversations happen around
                     the dinner table.</p>
 
