--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <span class="subtitle">Simply Tasty</span>
             <h1>Les Saveurs de Langpoklakpam</h1>
-            <p>Authentic flavors brought to life by passion and tradition.</p>
+            <p>The Flavours of Langpoklakpam.</p>
             <div class="btn-group">
                 <a href="menu" class="btn btn-primary">Order Now</a>
                 <a href="#about" class="btn btn-outline">Our Story</a>
@@ -69,7 +69,7 @@
 
     <section class="container welcome-section">
         <div class="text-center">
-            <h2 class="section-title">Experience "ChakHao"</h2>
+            <h2 class="section-title">Experience "Les Saveurs de Langpoklakpam"</h2>
             <p class="lead-text">
                 We don't just serve food; we serve memories, laughter, and the warmth of a shared meal.
                 Our promise is simple: authentic flavors in every bite that bring you back to the comfort of home.
