--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les Saveurs de Langpoklakpam - The Flavours of Langpoklakpam</title>
 
-    <link rel="icon" type="image/png" href="https://files.catbox.moe/skenzm.png">
+    <link rel="icon" type="image/png" href="https://files.catbox.moe/ow0kes.png">
 
     <link rel="stylesheet" href="style.css">
 
@@ -15,6 +15,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;600&display=swap"
         rel="stylesheet">
+    <meta name="title" content="Les Saveurs de Langpoklakpam  - Authentic Flavors">
+    <meta name="description" content="Handcrafted dishes made with love and tradition. Order authentic food online now.">
+    <meta name="theme-color" content="#d35400"> <meta property="og:type" content="website">
+    <meta property="og:url" content="https://restaurant.aat.meiraba.me/menu">
+    <meta property="og:title" content="Les Saveurs de Langpoklakpam  - Authentic Flavors">
+    <meta property="og:description" content="Handcrafted dishes made with love and tradition. Order authentic food online now.">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://restaurant.aat.meiraba.me/menu">
+    <meta property="twitter:title" content="Les Saveurs de Langpoklakpam  - Authentic Flavors">
+    <meta property="twitter:description" content="Handcrafted dishes made with love and tradition. Order authentic food online now.">
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80">
 </head>
 
 <body class="home-page">
@@ -28,7 +41,7 @@
 
     <nav class="navbar">
         <a href="index.html" class="logo-link">
-            <img src="https://files.catbox.moe/21wq4l.png" alt="ChakHao Logo" class="logo-img">
+            <img src="https://files.catbox.moe/ow0kes.png" alt="ChakHao Logo" class="logo-img">
         </a>
         <div class="hamburger"><i class="fas fa-bars"></i></div>
         <ul class="nav-links">
@@ -52,7 +65,7 @@
 
     <header class="hero">
         <div class="hero-content">
-            <img src="https://files.catbox.moe/skenzm.png" alt="ChakHao Brand" class="hero-logo">
+            <img src="https://files.catbox.moe/ow0kes.png" alt="ChakHao Brand" class="hero-logo">
 
             <span class="subtitle">Simply Tasty</span>
             <h1>Les Saveurs de Langpoklakpam</h1>
